app/assets/stylesheets/components/answers/answer_index_item.scss
.Answer {
  padding: 16px 0px 10px 0px;
  border-bottom: 1px solid #e2e2e2;
  font-size: 17px;
}

.AnswerAuthorHeader {
  display: flex;

  margin-bottom: 7px;
}

.AnswerAuthorHeader:hover {
  text-decoration: underline;
}

.AnswerText {
  padding-bottom: 8px;
}

.CommentsLink {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 13px;
  color: #999;
  padding-top: 8px;
  padding-left: 4px;
}

